@@ -1,5 +1,6 @@
 * Fix XSS vulnerability in get_js and get_css files
 * Adding add_extrahtml() method to Ooh form elements
+* Reinitialize page_controller->session variable when session is reopened
 
 Version 2.1.0
 ==============
